Endpoints de equipos funcionando después de autenticación con permisos.